--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "next": "12.2.3",
