--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "cy:open": "cypress open"
+    "cy:open": "cypress open",
+    "ci": "next build && next export"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.3",
